[gd_scene load_steps=8 format=3 uid="uid://cid0gwgt0yh1p"]

[ext_resource type="Script" path="res://main_window/side_panel/settings/settings.gd" id="1_xu2b7"]
[ext_resource type="Script" path="res://custom/padded_scrollbar.gd" id="2_r5ote"]
[ext_resource type="Script" path="res://custom/tooltip.gd" id="4_70x8g"]
[ext_resource type="Texture2D" uid="uid://c4185sydmovdc" path="res://main_window/side_panel/settings/images/open.svg" id="4_bf631"]
[ext_resource type="Script" path="res://custom/formatted_spin_box.gd" id="5_px7qq"]
[ext_resource type="Texture2D" uid="uid://cgn2tyjgkapl2" path="res://main_window/side_panel/settings/images/reset.svg" id="7_amjql"]
[ext_resource type="FontFile" uid="uid://c7b83cfl74of8" path="res://theme/fonts/OpenSans-ExtraBoldItalic.ttf" id="7_fjnu2"]

[node name="Settings" type="VBoxContainer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 337.0
grow_vertical = 2
theme_type_variation = &"MediumSeparation"
script = ExtResource("1_xu2b7")

[node name="Heading" type="Label" parent="."]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Settings"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="PaddedScrollbar" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_r5ote")

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar"]
layout_mode = 2
theme_type_variation = &"MediumSeparation"

[node name="StorePath" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/StorePath"]
layout_mode = 2
theme_type_variation = &"SmallSeparation"

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/StorePath/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "Store Path"
vertical_alignment = 2

[node name="Change" type="Button" parent="ScrollContainer/PaddedScrollbar/VBox/StorePath/Setting"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("4_bf631")

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/StorePath/Setting/Change"]
script = ExtResource("4_70x8g")
text = "Open Directory"
popup_position = 5

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/StorePath"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
bbcode_enabled = true
text = "[fill]The path under which Habituary stores your to-dos. [b]It is highly recommended that you keep regular backups of this directory to prevent data loss in case of errors![/b][/fill]"
fit_content = true

[node name="TodayPosition" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/TodayPosition"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/TodayPosition/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "Current Day Position"

[node name="Options" type="OptionButton" parent="ScrollContainer/PaddedScrollbar/VBox/TodayPosition/Setting"]
layout_mode = 2

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/TodayPosition"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
bbcode_enabled = true
text = "[fill]After changing dates, the currently selected day will be displayed at the center position of the list view.[/fill]"
fit_content = true

[node name="DayStart" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/DayStart"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/DayStart/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "Start Day At"

[node name="Hours" type="SpinBox" parent="ScrollContainer/PaddedScrollbar/VBox/DayStart/Setting"]
layout_mode = 2
max_value = 23.0
alignment = 1
select_all_on_focus = true
script = ExtResource("5_px7qq")
format_string = "%02d"

[node name="Colon" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/DayStart/Setting"]
layout_mode = 2
text = " : "

[node name="Minutes" type="SpinBox" parent="ScrollContainer/PaddedScrollbar/VBox/DayStart/Setting"]
layout_mode = 2
max_value = 59.0
alignment = 1
script = ExtResource("5_px7qq")
format_string = "%02d"

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/DayStart"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
bbcode_enabled = true
text = "[fill]After reaching this time of the day, Habituary will automatically move the list view one day forward.[/fill]"
fit_content = true

[node name="FirstWeekday" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/FirstWeekday"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/FirstWeekday/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "Start Weeks on Monday"

[node name="Options" type="CheckButton" parent="ScrollContainer/PaddedScrollbar/VBox/FirstWeekday/Setting"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
button_pressed = true

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/FirstWeekday"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
bbcode_enabled = true
text = "[fill]New weeks in the calendar widget start on Mondays.[/fill]"
fit_content = true

[node name="FadeTickedOffTodos" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/FadeTickedOffTodos"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/FadeTickedOffTodos/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "Fade Ticked Off To-Dos"

[node name="Options" type="CheckButton" parent="ScrollContainer/PaddedScrollbar/VBox/FadeTickedOffTodos/Setting"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
button_pressed = true

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/FadeTickedOffTodos"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
bbcode_enabled = true
fit_content = true

[node name="FadeNonTodayDates" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Setting" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/FadeNonTodayDates"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/FadeNonTodayDates/Setting"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "Fade Non-Today Dates"

[node name="Options" type="OptionButton" parent="ScrollContainer/PaddedScrollbar/VBox/FadeNonTodayDates/Setting"]
layout_mode = 2

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/FadeNonTodayDates"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
theme_override_fonts/bold_italics_font = ExtResource("7_fjnu2")
bbcode_enabled = true
fit_content = true

[node name="ToDoColors" type="VBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Color1" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "To-Do Color #1"

[node name="Reset" type="Button" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color1"]
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("7_amjql")

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color1/Reset"]
script = ExtResource("4_70x8g")
text = "Reset to Default"
popup_position = 5

[node name="ColorPicker" type="ColorPickerButton" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color1"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
mouse_default_cursor_shape = 2
edit_alpha = false

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color1/ColorPicker"]
script = ExtResource("4_70x8g")
text = "Click to Choose Color"
popup_position = 5

[node name="Color2" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "To-Do Color #2"

[node name="Reset" type="Button" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color2"]
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("7_amjql")

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color2/Reset"]
script = ExtResource("4_70x8g")
text = "Reset to Default"
popup_position = 5

[node name="ColorPicker" type="ColorPickerButton" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color2"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
mouse_default_cursor_shape = 2
edit_alpha = false

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color2/ColorPicker"]
script = ExtResource("4_70x8g")
text = "Click to Choose Color"
popup_position = 5

[node name="Color3" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "To-Do Color #3"

[node name="Reset" type="Button" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color3"]
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("7_amjql")

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color3/Reset"]
script = ExtResource("4_70x8g")
text = "Reset to Default"
popup_position = 5

[node name="ColorPicker" type="ColorPickerButton" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color3"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
mouse_default_cursor_shape = 2
edit_alpha = false

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color3/ColorPicker"]
script = ExtResource("4_70x8g")
text = "Click to Choose Color"
popup_position = 5

[node name="Color4" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "To-Do Color #4"

[node name="Reset" type="Button" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color4"]
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("7_amjql")

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color4/Reset"]
script = ExtResource("4_70x8g")
text = "Reset to Default"
popup_position = 5

[node name="ColorPicker" type="ColorPickerButton" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color4"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
mouse_default_cursor_shape = 2
edit_alpha = false

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color4/ColorPicker"]
script = ExtResource("4_70x8g")
text = "Click to Choose Color"
popup_position = 5

[node name="Color5" type="HBoxContainer" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_type_variation = &"HeaderSmall"
text = "To-Do Color #5"

[node name="Reset" type="Button" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color5"]
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("7_amjql")

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color5/Reset"]
script = ExtResource("4_70x8g")
text = "Reset to Default"
popup_position = 5

[node name="ColorPicker" type="ColorPickerButton" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color5"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
mouse_default_cursor_shape = 2
edit_alpha = false

[node name="Tooltip" type="Node" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors/Color5/ColorPicker"]
script = ExtResource("4_70x8g")
text = "Click to Choose Color"
popup_position = 5

[node name="Explanation" type="RichTextLabel" parent="ScrollContainer/PaddedScrollbar/VBox/ToDoColors"]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 2
theme_type_variation = &"Explanation"
theme_override_fonts/bold_italics_font = ExtResource("7_fjnu2")
bbcode_enabled = true
text = "[fill]The set of colors that can be assigned to a to-do's text in the formatting options while editing it. Changing this [u]will[/u] affect existing colored to-dos![/fill]"
fit_content = true
